# yai

./: .editorconfig  .gitignore  .gitmodules  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPATIBILITY.md  CONTRIBUTING.md  Cargo.toml  DATA_POLICY.md  Doxyfile  FOUNDATION.md  GOVERNANCE.md  ICE_CORE_KERNEL.tla  LAW_COMPATIBILITY.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  VERSIONING.md  ice-launcher.sh  law-compatibility.v1.json  mkdocs.yml
mind/: .gitignore  Cargo.toml  Makefile  build.rs
mind/contract/: README.md
mind/docs/: README.md  mind-c-final-architecture.md  mind-rust-to-c-migration-closeout.md
mind/docs/architecture/: overview.md
mind/docs/archive/: mind-c-foundation-phase2.md  mind-c-memory-graph-phase3.md
mind/docs/proof/: PROOF_POINTER.md
mind/docs/security/: threat-model.md
mind/include/: mind.h  mind_cognition.h  mind_memory.h  mind_providers.h  mind_transport.h
mind/src/: error.rs  lib.rs  main.c  main.rs  mind.c  models.rs  server.rs  types.rs
mind/src/_graveyard/providers/llm/: mod.rs
mind/src/agents/: code.rs  historian.rs  knowledge.rs  mod.rs  system.rs  validator.rs
mind/src/app/: mind_server.rs  mod.rs
mind/src/bridge/: shm.rs  uds.rs  vault.rs
mind/src/cli/: config.rs  mod.rs  paths.rs  proc.rs
mind/src/cli/commands/: chat.rs  down.rs  dsar.rs  embed.rs  events.rs  graph.rs  logs.rs  mod.rs  monitor.rs  providers.rs  restart.rs  sessions.rs  shell.rs  status.rs  up.rs  verify.rs
mind/src/cognition/: cognition.c  cognition_internal.h  mod.rs  models.rs
mind/src/cognition/agents/: agent_code.c  agent_knowledge.c  agents_dispatch.c  code.rs  historian.rs  knowledge.rs  legacy.rs  mod.rs  validator.rs
mind/src/cognition/embeddings/: mod.rs
mind/src/cognition/llm/: adapter.rs
mind/src/cognition/memory/: legacy.rs  mod.rs  types.rs
mind/src/cognition/memory/graph/: bridge.rs  facade.rs
mind/src/cognition/memory/legacy/: core.rs
mind/src/cognition/orchestration/: mod.rs  planner.c  rag_context_builder.c  rag_pipeline.c
mind/src/cognition/orchestration/planner/: mod.rs
mind/src/cognition/orchestration/rag/: mod.rs  (+4 more)
mind/src/cognition/rag/: legacy.rs  mod.rs  pipeline.rs
mind/src/cognition/reasoning/: mod.rs  reasoning_roles.c  roles.rs  scoring.c  scoring.rs
mind/src/control/: chat.rs  cortex.rs  daemon.rs  dsar.rs  events.rs  mod.rs  providers.rs  shell.rs  workspace.rs
mind/src/control/lifecycle/: awareness.rs
mind/src/core/: ai_client.rs  executor.rs  foundation.rs  governance.rs  mod.rs  planner.rs  protocol.rs  runtime.rs  scheduler.rs  state.rs
mind/src/interface/: config.rs  mod.rs  paths.rs  proc.rs
mind/src/interface/commands/: chat.rs  down.rs  embed.rs  events.rs  graph.rs  logs.rs  mod.rs  monitor.rs  providers.rs  restart.rs  sessions.rs  shell.rs  status.rs  up.rs  verify.rs
mind/src/interface/tui/: actions.rs  app.rs  keymap.rs  mod.rs  reducer.rs  snapshot.rs  theme.rs
mind/src/legacy/: mod.rs
mind/src/legacy/cognition/: mod.rs
mind/src/lifecycle/: awareness.rs  mod.rs
mind/src/llm/: adapter.rs  roles.rs
mind/src/memory/: arena.c  contracts.rs  core.rs  memory.c  mod.rs  storage_bridge.c  working.rs
mind/src/memory/graph/: api.rs  backend.rs  backend_rpc.rs  bridge.rs  domain_activation.c  domain_authority.c  domain_episodic.c  domain_semantic.c  facade.rs  graph.c  graph_backend.h  graph_backend_rpc.c  graph_facade.c  ids.c  ids.rs  mod.rs  semantic_db.c  vector_index.c
mind/src/memory/legacy/: episodic.rs  mod.rs  semantic.rs  sqlite.rs  store.rs
mind/src/paths/: mod.rs  paths.rs  runtime_layout.rs  workspace_layout.rs
mind/src/providers/: client.rs  client_bridge.c  embedder_mock.c  mock_provider.c  mod.rs  provider_registry.c  providers.c  registry.rs  types.rs
mind/src/providers/adapters/: mod.rs
mind/src/providers/embedders/: base.rs  mock.rs  mod.rs
mind/src/providers/embeddings/: base.rs  candle.rs  gguf.rs  llamacpp.rs  mock.rs  mod.rs  ollama.rs  onnx.rs  openai.rs  openai_compat.rs
mind/src/rag/: context_builder.rs  pipeline.rs
mind/src/rpc/: mod.rs  protocol.rs  uds_client.rs  uds_server.rs
mind/src/runtime/: ai_client.rs  api.rs  executor.rs  foundation.rs  governance.rs  mod.rs  planner.rs  protocol.rs  runtime.rs  scheduler.rs  state.rs  workspace_layout.rs
mind/src/runtime/core/: mod.rs
mind/src/runtime/policy/: mod.rs
mind/src/runtime/workspace/: mod.rs
mind/src/shared/: constants.rs
mind/src/transport/: events_clients.rs  mod.rs  protocol.c  protocol.rs  rpc_client.rs  transport.c  uds_server.c  uds_server.rs
mind/src/transport/bridge/: mod.rs  shm.rs  uds.rs  vault.rs
mind/src/transport/protocol/: mod.rs
mind/src/transport/rpc/: protocol.rs  uds_client.rs  uds_server.rs
mind/src/types/: graph.rs  mod.rs
mind/src/workspace/: layout.rs
mind/tests/: integration_test.rs  memory_rag.rs  providers.rs
mind/tests_c/: test_cognition_agents.c  test_lifecycle_reinit.c  test_memory_domains.c  test_memory_graph.c  test_mind_daemon_smoke.c  test_mind_flow.c  test_providers.c  test_rag_pipeline.c  test_reasoning_scoring.c  test_runtime_primary.c  test_transport.c
(+5084 files in other folders)
