[package]
name = "yai-mind"
version = "0.1.0"
edition = "2021"
authors = ["Francesco Maiomascio"]
description = "YAI Cognitive Core (Mind Layer - L3)"

[dependencies]
anyhow = "1"

# Serializzazione
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Storage
rusqlite = { version = "0.31", features = ["bundled"] }

# Graph / reasoning
petgraph = "0.6"

# Vector search
usearch = "2"

# Hashing (determinism / verify)
blake3 = "1"

# Optional embeddings backends
tokenizers = { version = "0.15", optional = true }
tract-onnx = { version = "0.20", optional = true }
candle-core = { version = "0.5", optional = true }
candle-nn = { version = "0.5", optional = true }
candle-transformers = { version = "0.5", optional = true }

[features]
default = ["embeddings-onnx"]

embeddings-onnx = ["tract-onnx", "tokenizers"]
embeddings-candle = [
    "candle-core",
    "candle-nn",
    "candle-transformers",
    "tokenizers"
]

legacy-providers = []

[dev-dependencies]
memoffset = "0.9"
